{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 61,
  "lineage": "bfe5a015-df6f-81ba-3d93-7a7d3f4677e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:internet-gateway/igw-0d77d59c69e7e92bf",
            "id": "igw-0d77d59c69e7e92bf",
            "owner_id": "251561352331",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "jobhunter-igw",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "jobhunter-igw",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251561352331:loadbalancer/app/jobhunter-alb/4d2674f23f9b64c0",
            "arn_suffix": "app/jobhunter-alb/4d2674f23f9b64c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jobhunter-alb-643561500.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:251561352331:loadbalancer/app/jobhunter-alb/4d2674f23f9b64c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jobhunter-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0533fcc4b37713052"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010a72e3030fb7d59"
              },
              {
                "subnet_id": "subnet-0294de646861b8de2"
              }
            ],
            "subnets": [
              "subnet-010a72e3030fb7d59",
              "subnet-0294de646861b8de2"
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "jobhunter-alb",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "jobhunter-alb",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "vpc_id": "vpc-06fbf6b67b5c60604",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251561352331:listener/app/jobhunter-alb/4d2674f23f9b64c0/43a028c4a8de78f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:251561352331:targetgroup/jobhunter-api-tg/6b481952abae4a33",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:251561352331:listener/app/jobhunter-alb/4d2674f23f9b64c0/43a028c4a8de78f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:251561352331:loadbalancer/app/jobhunter-alb/4d2674f23f9b64c0",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.api",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251561352331:targetgroup/jobhunter-api-tg/6b481952abae4a33",
            "arn_suffix": "targetgroup/jobhunter-api-tg/6b481952abae4a33",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:251561352331:targetgroup/jobhunter-api-tg/6b481952abae4a33",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:251561352331:loadbalancer/app/jobhunter-alb/4d2674f23f9b64c0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jobhunter-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:route-table/rtb-0dcbcd050abb46c8a",
            "id": "rtb-0dcbcd050abb46c8a",
            "owner_id": "251561352331",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d77d59c69e7e92bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025dfc528b2ecf94d",
            "route_table_id": "rtb-0dcbcd050abb46c8a",
            "subnet_id": "subnet-0294de646861b8de2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c878bf40e241b5bb",
            "route_table_id": "rtb-0dcbcd050abb46c8a",
            "subnet_id": "subnet-010a72e3030fb7d59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:security-group/sg-0533fcc4b37713052",
            "description": "Allow HTTP traffic from the world",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0533fcc4b37713052",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jobhunter-alb-sg",
            "name_prefix": "",
            "owner_id": "251561352331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "saas",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "saas",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:security-group/sg-0b54bd443e88b6dd5",
            "description": "Allow inbound PostgreSQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b54bd443e88b6dd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL from anywhere",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "jobhunter-rds-sg",
            "name_prefix": "",
            "owner_id": "251561352331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:security-group/sg-01d7beecb35b9a95e",
            "description": "Allow Redis traffic from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d7beecb35b9a95e",
            "ingress": [
              {
                "cidr_blocks": [
                  "98.97.76.146/32"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Redis from EC2",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010bd791c73392b48"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "jobhunter-redis-sg",
            "name_prefix": "",
            "owner_id": "251561352331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:security-group/sg-010bd791c73392b48",
            "description": "Allow traffic to Baalebos API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010bd791c73392b48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jobhunter-web-sg",
            "name_prefix": "",
            "owner_id": "251561352331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:subnet/subnet-0294de646861b8de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0294de646861b8de2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251561352331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "saas-2",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "saas-2",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:subnet/subnet-010a72e3030fb7d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010a72e3030fb7d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251561352331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "saas-1",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "saas-1",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "vpc_id": "vpc-06fbf6b67b5c60604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251561352331:vpc/vpc-06fbf6b67b5c60604",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c64f82952b3176d",
            "default_route_table_id": "rtb-03c0b22145882a1fc",
            "default_security_group_id": "sg-0ca608218bb880c37",
            "dhcp_options_id": "dopt-031c7915cc64ce3f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fbf6b67b5c60604",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c0b22145882a1fc",
            "owner_id": "251561352331",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "jobhunter-vpc",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "jobhunter-vpc",
              "Owner": "Baalebos-DevOps",
              "Project": "jobhunter"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}